@@ -361,6 +361,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16047) Added activeusers attribute to meta=siteinfo&siprop=statistics
   output
 * Added redirect resolution to action=parse
+* (bug 16074) rvprop=content combined with a generator with a high limit causes
+  an error
 
 === Languages updated in 1.14 ===
 
